Analisis sintactico ascendente/Punto 2/expr.output
Terminals unused in grammar

    ';'


Grammar

    0 $accept: start $end

    1 start: start line
    2      | %empty

    3 line: exp '\n'

    4 exp: exp '+' exp
    5    | exp '-' exp
    6    | exp '*' exp
    7    | exp '/' exp
    8    | exp '^' exp
    9    | '(' exp ')'
   10    | TK_SEN '(' exp ')'
   11    | TK_COS '(' exp ')'
   12    | TK_TAN '(' exp ')'
   13    | TK_SENH '(' exp ')'
   14    | TK_COSH '(' exp ')'
   15    | TK_TANH '(' exp ')'
   16    | TK_LOG '(' exp ')'
   17    | TK_E '(' exp ')'
   18    | TK_SQRT '(' exp ')'
   19    | TK_PI
   20    | TK_NUM
   21    | TK_ID
   22    | TK_ID '=' exp


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3
    '(' (40) 9 10 11 12 13 14 15 16 17 18
    ')' (41) 9 10 11 12 13 14 15 16 17 18
    '*' (42) 6
    '+' (43) 4
    '-' (45) 5
    '/' (47) 7
    ';' (59)
    '=' (61) 22
    '^' (94) 8
    error (256)
    TK_NUM <real> (258) 20
    TK_SEN (259) 10
    TK_COS (260) 11
    TK_TAN (261) 12
    TK_SENH (262) 13
    TK_COSH (263) 14
    TK_TANH (264) 15
    TK_SQRT (265) 18
    TK_LOG (266) 16
    TK_E (267) 17
    TK_PI (268) 19
    TK_ID <real> (269) 21 22


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    start (26)
        on left: 1 2
        on right: 0 1
    line <real> (27)
        on left: 3
        on right: 1
    exp <real> (28)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 22


State 0

    0 $accept: . start $end

    $default  reduce using rule 2 (start)

    start  go to state 1


State 1

    0 $accept: start . $end
    1 start: start . line

    $end     shift, and go to state 2
    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    line  go to state 16
    exp   go to state 17


State 2

    0 $accept: start $end .

    $default  accept


State 3

   20 exp: TK_NUM .

    $default  reduce using rule 20 (exp)


State 4

   10 exp: TK_SEN . '(' exp ')'

    '('  shift, and go to state 18


State 5

   11 exp: TK_COS . '(' exp ')'

    '('  shift, and go to state 19


State 6

   12 exp: TK_TAN . '(' exp ')'

    '('  shift, and go to state 20


State 7

   13 exp: TK_SENH . '(' exp ')'

    '('  shift, and go to state 21


State 8

   14 exp: TK_COSH . '(' exp ')'

    '('  shift, and go to state 22


State 9

   15 exp: TK_TANH . '(' exp ')'

    '('  shift, and go to state 23


State 10

   18 exp: TK_SQRT . '(' exp ')'

    '('  shift, and go to state 24


State 11

   16 exp: TK_LOG . '(' exp ')'

    '('  shift, and go to state 25


State 12

   17 exp: TK_E . '(' exp ')'

    '('  shift, and go to state 26


State 13

   19 exp: TK_PI .

    $default  reduce using rule 19 (exp)


State 14

   21 exp: TK_ID .
   22    | TK_ID . '=' exp

    '='  shift, and go to state 27

    $default  reduce using rule 21 (exp)


State 15

    9 exp: '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 28


State 16

    1 start: start line .

    $default  reduce using rule 1 (start)


State 17

    3 line: exp . '\n'
    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp

    '-'   shift, and go to state 29
    '+'   shift, and go to state 30
    '*'   shift, and go to state 31
    '/'   shift, and go to state 32
    '^'   shift, and go to state 33
    '\n'  shift, and go to state 34


State 18

   10 exp: TK_SEN '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 35


State 19

   11 exp: TK_COS '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 36


State 20

   12 exp: TK_TAN '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 37


State 21

   13 exp: TK_SENH '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 38


State 22

   14 exp: TK_COSH '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 39


State 23

   15 exp: TK_TANH '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 40


State 24

   18 exp: TK_SQRT '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 41


State 25

   16 exp: TK_LOG '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 42


State 26

   17 exp: TK_E '(' . exp ')'

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 43


State 27

   22 exp: TK_ID '=' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 44


State 28

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
    9    | '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 45


State 29

    5 exp: exp '-' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 46


State 30

    4 exp: exp '+' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 47


State 31

    6 exp: exp '*' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 48


State 32

    7 exp: exp '/' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 49


State 33

    8 exp: exp '^' . exp

    TK_NUM   shift, and go to state 3
    TK_SEN   shift, and go to state 4
    TK_COS   shift, and go to state 5
    TK_TAN   shift, and go to state 6
    TK_SENH  shift, and go to state 7
    TK_COSH  shift, and go to state 8
    TK_TANH  shift, and go to state 9
    TK_SQRT  shift, and go to state 10
    TK_LOG   shift, and go to state 11
    TK_E     shift, and go to state 12
    TK_PI    shift, and go to state 13
    TK_ID    shift, and go to state 14
    '('      shift, and go to state 15

    exp  go to state 50


State 34

    3 line: exp '\n' .

    $default  reduce using rule 3 (line)


State 35

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   10    | TK_SEN '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 51


State 36

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   11    | TK_COS '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 52


State 37

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   12    | TK_TAN '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 53


State 38

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   13    | TK_SENH '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 54


State 39

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   14    | TK_COSH '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 55


State 40

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   15    | TK_TANH '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 56


State 41

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   18    | TK_SQRT '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 57


State 42

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   16    | TK_LOG '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 58


State 43

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   17    | TK_E '(' exp . ')'

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33
    ')'  shift, and go to state 59


State 44

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
   22    | TK_ID '=' exp .

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33

    $default  reduce using rule 22 (exp)


State 45

    9 exp: '(' exp ')' .

    $default  reduce using rule 9 (exp)


State 46

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    5    | exp '-' exp .
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33

    $default  reduce using rule 5 (exp)


State 47

    4 exp: exp . '+' exp
    4    | exp '+' exp .
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '^'  shift, and go to state 33

    $default  reduce using rule 4 (exp)


State 48

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    6    | exp '*' exp .
    7    | exp . '/' exp
    8    | exp . '^' exp

    '^'  shift, and go to state 33

    $default  reduce using rule 6 (exp)


State 49

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    7    | exp '/' exp .
    8    | exp . '^' exp

    '^'  shift, and go to state 33

    $default  reduce using rule 7 (exp)


State 50

    4 exp: exp . '+' exp
    5    | exp . '-' exp
    6    | exp . '*' exp
    7    | exp . '/' exp
    8    | exp . '^' exp
    8    | exp '^' exp .

    '^'  shift, and go to state 33

    $default  reduce using rule 8 (exp)


State 51

   10 exp: TK_SEN '(' exp ')' .

    $default  reduce using rule 10 (exp)


State 52

   11 exp: TK_COS '(' exp ')' .

    $default  reduce using rule 11 (exp)


State 53

   12 exp: TK_TAN '(' exp ')' .

    $default  reduce using rule 12 (exp)


State 54

   13 exp: TK_SENH '(' exp ')' .

    $default  reduce using rule 13 (exp)


State 55

   14 exp: TK_COSH '(' exp ')' .

    $default  reduce using rule 14 (exp)


State 56

   15 exp: TK_TANH '(' exp ')' .

    $default  reduce using rule 15 (exp)


State 57

   18 exp: TK_SQRT '(' exp ')' .

    $default  reduce using rule 18 (exp)


State 58

   16 exp: TK_LOG '(' exp ')' .

    $default  reduce using rule 16 (exp)


State 59

   17 exp: TK_E '(' exp ')' .

    $default  reduce using rule 17 (exp)
